zoc/src/syntax_tree/parser/tests/snapshots/zoc__syntax_tree__parser__tests__universe__prop0.snap
---
source: zoc/src/syntax_tree/parser/tests/universe.rs
expression: "&cst"
---
Universe(
    UniverseLiteral {
        level: 0,
        start: ByteIndex(
            0,
        ),
        erasable: true,
    },
)
