zoc/src/syntax_tree/parser/tests/snapshots/zoc__syntax_tree__parser__tests__universe__prop1.snap
---
source: zoc/src/syntax_tree/parser/tests/universe.rs
expression: "&ost"
---
Universe(
    UniverseLiteral {
        level: 1,
        span: (
            ByteIndex(
                0,
            ),
            ByteIndex(
                5,
            ),
        ),
        erasable: true,
    },
)
